<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NoActionBar" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/recipe_video"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_height" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen8dp"
            android:layout_marginBottom="@dimen/dimen8dp"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="@dimen/dimen8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen8dp"
                android:layout_marginBottom="@dimen/dimen8dp"
                android:orientation="vertical"
                android:padding="@dimen/dimen4dp">

                <TextView
                    android:id="@+id/video_short_description"
                    style="@style/subheadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen16dp"
                    tools:text="step 1" />

                <TextView
                    android:id="@+id/video_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen8dp"
                    android:textSize="@dimen/textsize_20"
                    app:layout_constraintTop_toBottomOf="@+id/shortDescription"
                    tools:text="Recipe details details" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/previous_step"
                android:layout_width="@dimen/dimen120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dimen16dp"
                android:background="@color/colorAccent"
                android:text="@string/previous_step"
                android:textColor="@color/colorSecondaryText" />

            <Button
                android:id="@+id/next_step"
                android:layout_width="@dimen/dimen120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen16dp"
                android:background="@color/colorAccent"
                android:text="@string/next_step"
                android:textColor="@color/colorSecondaryText" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>