<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredients_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.backing.vvaddi.mybakingapp.ui.fragment.RecipeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
...
                android:layout_marginLeft="@dimen/dimen8dp"
                android:layout_marginRight="@dimen/dimen8dp"
                android:orientation="vertical"
                android:padding="@dimen/dimen4dp">

                <TextView
                    android:id="@+id/ingredients_title"
                    style="@style/headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:layout_marginBottom="@dimen/dimen8dp"
                    android:gravity="center"
...
