<resources>
    <string name="app_name">MyBakingApp</string>
    <string name="bakingTime">Baking Time</string>
    <string name="serves">Serves</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_by_step">Procedure</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
