...
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/recipe_image"
            android:layout_width="@dimen/recipe_image_width"
            android:layout_height="@dimen/recipe_image_height" />

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen16dp"
            android:layout_marginBottom="@dimen/dimen8dp"
            android:layout_toRightOf="@id/recipe_image"
            android:textColor="@color/colorPrimaryDark"
...
